--- a/snippets/ecom-header-3.liquid
+++ b/snippets/ecom-header-3.liquid
@@ -228,46 +228,52 @@
           {% endif %}
       </div>
 
-      {% unless section.settings.hide_search_bar or page.template_suffix contains 'dalp' %}
-        <div class="flex-auto flex-item" style="text-align: center;">
+      <div class="flex-auto flex-item{% if section.settings.hide_search_bar or page.template_suffix contains 'dalp' %} hide-element{% endif %}" style="text-align: center;">
+        {% unless section.settings.hide_search_bar or page.template_suffix contains 'dalp' %}
           {% include 'ecom3-search-bar' %}
-        </div>
-      {% endunless %}
+        {% endunless %}
+      </div>
             
-      <div class="flex-item" id="ecom3-account-cart" style="display: flex; align-items: center; gap: 15px;">      
-		{% unless section.settings.hide_customer_login or page.template_suffix contains 'dalp' %}
-          {% if settings.new_shopify_accounts_url != blank %}
-            <span class="site-header--meta-links medium-down--hide" style="display:flex;align-items:center;">
-              <i style="font-size:24px; margin-right:7px; " class="fa-solid fa-circle-user"></i> <a href="{{ settings.new_shopify_accounts_url }}" id="customer_login_link">Log In</a>
-            </span>
-          {% else %}       
-          {% if shop.customer_accounts_enabled %}
-            <span class="site-header--meta-links medium-down--hide" style="display:flex;align-items:center;">
-          {% if customer %}
-            {% capture first_name %}{% endcapture %}
-            <i style="font-size:24px;" class="fa-solid fa-circle-user"></i> 
-            <span class="site-header--meta-links medium-down--hide">
-            <a style="display:block;" href="{{ routes.account_url }}">Hi, {{ customer.first_name }}</a> 
-            </span>
-          {% else %}
-             <i style="font-size:24px; margin-right:7px;" class="fa-solid fa-circle-user"></i> <a href="/account/login" id="customer_login_link">Log In</a>
-          {% endif %}
-           </span>
-          {% endif %}
-         {% endif %}
-        {% endunless %}
-
-		    {% unless section.settings.hide_shopping_links or page.template_suffix contains 'dalp' %}
-          <a href="{{ routes.cart_url }}" class="header-cart-btn ecom3-cart cart-toggle" id="ecom-header-cart" aria-label="shopping cart">
-            <span class="icon icon-cart"></span>
-    		<span class="cart-count cart-badge--desktop">{{ cart.item_count }}</span>
-          </a>
-        {% endunless %}
-
+      <div class="flex-item" id="ecom3-account-cart" style="display: flex; align-items: center; gap: 15px; flex-wrap: nowrap;">      
         {%if settings.nmr_local %}
-          <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
-          <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+          <div class="header-store-locator-wrapper">
+            <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
+            <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+          </div>
         {% endif %}
+
+		<div class="header-customer-login-wrapper{% if section.settings.hide_customer_login or page.template_suffix contains 'dalp' %} hide-element{% endif %}">
+          {% unless section.settings.hide_customer_login or page.template_suffix contains 'dalp' %}
+            {% if settings.new_shopify_accounts_url != blank %}
+              <span class="site-header--meta-links medium-down--hide" style="display:flex;align-items:center;">
+                <i style="font-size:24px; margin-right:7px; " class="fa-solid fa-circle-user"></i> <a href="{{ settings.new_shopify_accounts_url }}" id="customer_login_link">Log In</a>
+              </span>
+            {% else %}       
+            {% if shop.customer_accounts_enabled %}
+              <span class="site-header--meta-links medium-down--hide" style="display:flex;align-items:center;">
+            {% if customer %}
+              {% capture first_name %}{% endcapture %}
+              <i style="font-size:24px;" class="fa-solid fa-circle-user"></i> 
+              <span class="site-header--meta-links medium-down--hide">
+              <a style="display:block;" href="{{ routes.account_url }}">Hi, {{ customer.first_name }}</a> 
+              </span>
+            {% else %}
+               <i style="font-size:24px; margin-right:7px;" class="fa-solid fa-circle-user"></i> <a href="/account/login" id="customer_login_link">Log In</a>
+            {% endif %}
+             </span>
+            {% endif %}
+           {% endif %}
+          {% endunless %}
+        </div>
+
+		<div class="header-cart-wrapper{% if section.settings.hide_shopping_links or page.template_suffix contains 'dalp' %} hide-element{% endif %}">
+          {% unless section.settings.hide_shopping_links or page.template_suffix contains 'dalp' %}
+            <a href="{{ routes.cart_url }}" class="header-cart-btn ecom3-cart cart-toggle" id="ecom-header-cart" aria-label="shopping cart">
+              <span class="icon icon-cart"></span>
+      		  <span class="cart-count cart-badge--desktop">{{ cart.item_count }}</span>
+            </a>
+          {% endunless %}
+        </div>
       </div> 
      </div>
   </div>
