Header Link NMR Local

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -7467,14 +7467,14 @@ form#ecom-round-search-bar input{
   Mighty Location Selector Phone Styling - Use Header Text Color
 ==============================================================================*/
 .mighty-location-selector-content .mighty-location-selector-phone {
-  color: $headerText !important;
+  color: #111827!important;
   
   a {
-    color: $headerText !important;
+    color: #111827!important;
     
     &:hover,
     &:focus {
-      color: lighten($headerText, 15%) !important;
+      color: lighten(#111827, 15%) !important;
     }
   }
 }
