--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -97,7 +97,7 @@ Modify at your own peril, a broken website is the likely result.
   });
 </script>
 <hr>
-<div id="ProductSection-{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="product-template" data-related-enabled="{{ section.settings.product_related_enable }}" data-social-sharing="{{ section.settings.social_sharing }}" data-show-compare-at-price="false" data-stock="false" data-incoming-transfer="false" data-ajax-cart-method="{{ settings.ajax_cart_method }}">
+<div id="ProductSection-{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="product-template" data-related-enabled="{{ section.settings.product_related_enable }}" data-social-sharing="{{ section.settings.social_sharing }}" data-show-compare-at-price="false" data-stock="false" data-incoming-transfer="false" data-house-hasson-catalog="{{ section.settings.house_hasson_catalog }}" data-ajax-cart-method="{{ settings.ajax_cart_method }}">
 
   {% if section.settings.title != blank %}
     <div class="section-header">
