--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -292,7 +292,7 @@ Modify at your own peril, a broken website is the likely result.
     {% include 'svg-definitions' with 'stock-icon' %}
     <span id="variantQuantity-{{ section.id }}__message">
     {% if qty < 1 %}
-    Contact us to check availability
+    Contact Us to Check Availability
     {% else %}
     Available Inventory: {{ qty }}
     {% endif %}
